# masaharu-suizu.github.io

./: .gitignore  README.md  feedly-clone.md  generate_feed.py  generate_tech_books_rss.py  github_notifications.atom  index.html  pyproject.toml  rss_tech_books.atom  rss_tech_books.py  script.js  spec-kit.md  style.css  tech_books_rss.atom
.data/: tech_books.json
.github/workflows/: bot.yml  bsky_bot.yml  change_github_notifications_to_read.yml  change_notifications_status.yml  discord_kabu_daily_report.yml  discord_kabu_weekly_report.yml  generate_feed.yml  haiku.yml  rss.yml  rss_tech_books.yml  security-scan.yml  tech_books_rss.yml
.src/: bot_bsky.py  bsky_bot.py  change_github_notifications_to_read.py  discord_kabu_common.py  discord_kabu_daily_report.py  discord_kabu_weekly_report.py  generate_feed.py  haiku_generator.py  rss_github_notifications.py  rss_tech_books.py
Python/: uv.md
docs/: code-review-point-of-view.md  git-flow.md  index.html  next-js.md  uv.md
rss/: README.md  github_notifications.atom  rss_tech_books.atom
tips/: index.html  linux.md  mysql.md  perl.md  php.md
