[project]
name = "github-notification-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "feedgen>=1.0.0",
    "jpholiday>=1.0.3",
    "requests>=2.32.5",
    "yfinance>=1.3.0",
]
